--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   bloc_test: ^7.1.0
-  mockito: ^4.1.0
+  # mockito: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
